mikec/tests/Pass/semantic/120.mc
int main(){
  char a = 'a';
  int b = 1;
  a = b;
}


