mikec/tests/FAIL/semantic/test-scope-block2.mc
void main(){
	int a = 0;
	{
		char a = 'a';
	}
	a = 1;
	return;
}